[package]
name = "accord-tui"
version = "0.1.0"
edition = "2024"
description = "Accord TUI client - terminal interface for the Accord P2P network"
license = "MIT"

[[bin]]
name = "accord"
path = "src/main.rs"

[dependencies]
network = { path = "../network" }

multiaddr = "0.18"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1"
serde_json = "1"
